Add LockedNodeList
A LockedNodeList indicates that the entire node repository is locked, and that
no nodes in the list will change while the lock held.